# slitherway

./: CHANGELOG.md  README.md  pyproject.toml
.changes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md
.changes/unreleased/: Added-20220430-094410.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr.yml  release.yml
slitherway/: commands.py  models.py
tests/: test_slitherway.py
