[tool.poetry]
name = "slitherway"
version = "0.1.3"
description = "Python wrapper for the Flyway CLI"
authors = ["Ryan Brink <rbweb@pm.me>"]
keywords = ["migrations", "flyway"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/unredundant/slitherway"
repository = "https://github.com/unredundant/slitherway"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.7 <4"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"
testcontainers = "^3.5.3"
SQLAlchemy = "^1.4.36"
psycopg2 = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
